Fixed menu scrolling issue when height is too small

--- a/styles/components/nav-menu.scss
+++ b/styles/components/nav-menu.scss
@@ -1,16 +1,16 @@
 .nav-menu {
   width: 100%;
-  height: 100%;
   position: fixed;
+  height: 100%;
   left: 0;
   top: 0;
-  overflow-y: scroll;
+  overflow-y: auto;
   display: none;
   background-color: $colour--black;
   clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
 
   &.show {
-    display: flex;
+    display: block;
   }
 }
 
@@ -26,6 +26,7 @@
 
 .nav-menu__list {
   width: 100%;
+  padding: spacing(13) 0;
 }
 
 .nav-menu-list__item {
